--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>LagFarmFinder</groupId>
-  <artifactId>LagFarmFinder</artifactId>
+  <artifactId>ListFormatter</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <name>LagFarmFinder</name>
+  <name>ListFormatter</name>
   <description>Laggy Mob Farm Finder</description>
   <url>https://github.com/boar401s2/LagFarmFinder</url>
   
